--- a/ES6_basic/.gitignore
+++ b/ES6_basic/.gitignore
@@ -1,6 +1,4 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
+# dependenciesi
 /node_modules
 /.pnp
 .pnp.js
