--- a/.gitignore
+++ b/.gitignore
@@ -206,3 +206,70 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+
+# dependenciesi
+/node_modules
+/.pnp
+.pnp.js
+nodesource_setup.sh
+package-lock.json
+package.json
+main.js
+
+# testing
+/coverage
+
+# next.js
+/.next/
+/out/
+
+# production
+/build
+
+# misc
+.DS_Store
+*.pem
+
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# local env files
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# vercel
+.vercel
+
+# typescript
+*.tsbuildinfo
+
+# VSCode
+.vscode
+
+# Cypress
+cypress/videos
+cypress/screenshots
+
+# Robots.txt
+robots.txt
+
+# yarn berry
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
+
+# storybook
+/.out
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
