--- a/Node_JS_basic/package.json
+++ b/Node_JS_basic/package.json
@@ -15,6 +15,7 @@
     "eslint": "^8.57.1",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-jest": "^29.0.1",
     "jest": "^30.1.2"
   }
 }
