--- a/Node_JS_basic/package.json
+++ b/Node_JS_basic/package.json
@@ -17,5 +17,360 @@
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-jest": "^29.0.1",
     "jest": "^30.1.2"
-  }
+  },
+  "dependencies": {
+    "acorn": "^8.15.0",
+    "acorn-jsx": "^5.3.2",
+    "ajv": "^6.12.6",
+    "ansi-escapes": "^4.3.2",
+    "ansi-regex": "^5.0.1",
+    "ansi-styles": "^4.3.0",
+    "anymatch": "^3.1.3",
+    "argparse": "^1.0.10",
+    "array-buffer-byte-length": "^1.0.2",
+    "array-includes": "^3.1.9",
+    "array.prototype.findlastindex": "^1.2.6",
+    "array.prototype.flat": "^1.3.3",
+    "array.prototype.flatmap": "^1.3.3",
+    "arraybuffer.prototype.slice": "^1.0.4",
+    "async-function": "^1.0.0",
+    "available-typed-arrays": "^1.0.7",
+    "babel-plugin-istanbul": "^7.0.0",
+    "babel-plugin-jest-hoist": "^30.0.1",
+    "babel-plugin-polyfill-corejs2": "^0.4.14",
+    "babel-plugin-polyfill-corejs3": "^0.13.0",
+    "babel-plugin-polyfill-regenerator": "^0.6.5",
+    "babel-preset-current-node-syntax": "^1.2.0",
+    "babel-preset-jest": "^30.0.1",
+    "balanced-match": "^1.0.2",
+    "brace-expansion": "^1.1.12",
+    "braces": "^3.0.3",
+    "browserslist": "^4.25.4",
+    "bser": "^2.1.1",
+    "buffer-from": "^1.1.2",
+    "call-bind": "^1.0.8",
+    "call-bind-apply-helpers": "^1.0.2",
+    "call-bound": "^1.0.4",
+    "callsites": "^3.1.0",
+    "camelcase": "^5.3.1",
+    "caniuse-lite": "^1.0.30001739",
+    "chalk": "^4.1.2",
+    "char-regex": "^1.0.2",
+    "ci-info": "^4.3.0",
+    "cjs-module-lexer": "^2.1.0",
+    "cliui": "^8.0.1",
+    "co": "^4.6.0",
+    "collect-v8-coverage": "^1.0.2",
+    "color-convert": "^2.0.1",
+    "color-name": "^1.1.4",
+    "concat-map": "^0.0.1",
+    "confusing-browser-globals": "^1.0.11",
+    "convert-source-map": "^2.0.0",
+    "core-js-compat": "^3.45.1",
+    "cross-spawn": "^7.0.6",
+    "data-view-buffer": "^1.0.2",
+    "data-view-byte-length": "^1.0.2",
+    "data-view-byte-offset": "^1.0.1",
+    "debug": "^4.4.1",
+    "dedent": "^1.6.0",
+    "deep-is": "^0.1.4",
+    "deepmerge": "^4.3.1",
+    "define-data-property": "^1.1.4",
+    "define-properties": "^1.2.1",
+    "detect-newline": "^3.1.0",
+    "doctrine": "^3.0.0",
+    "dunder-proto": "^1.0.1",
+    "eastasianwidth": "^0.2.0",
+    "electron-to-chromium": "^1.5.211",
+    "emittery": "^0.13.1",
+    "emoji-regex": "^9.2.2",
+    "error-ex": "^1.3.2",
+    "es-abstract": "^1.24.0",
+    "es-define-property": "^1.0.1",
+    "es-errors": "^1.3.0",
+    "es-object-atoms": "^1.1.1",
+    "es-set-tostringtag": "^2.1.0",
+    "es-shim-unscopables": "^1.1.0",
+    "es-to-primitive": "^1.3.0",
+    "escalade": "^3.2.0",
+    "escape-string-regexp": "^4.0.0",
+    "eslint-import-resolver-node": "^0.3.9",
+    "eslint-module-utils": "^2.12.1",
+    "eslint-scope": "^7.2.2",
+    "eslint-visitor-keys": "^3.4.3",
+    "espree": "^9.6.1",
+    "esprima": "^4.0.1",
+    "esquery": "^1.6.0",
+    "esrecurse": "^4.3.0",
+    "estraverse": "^5.3.0",
+    "esutils": "^2.0.3",
+    "execa": "^5.1.1",
+    "exit-x": "^0.2.2",
+    "expect": "^30.1.2",
+    "express": "^5.1.0",
+    "fast-deep-equal": "^3.1.3",
+    "fast-glob": "^3.3.3",
+    "fast-json-stable-stringify": "^2.1.0",
+    "fast-levenshtein": "^2.0.6",
+    "fastq": "^1.19.1",
+    "fb-watchman": "^2.0.2",
+    "file-entry-cache": "^6.0.1",
+    "fill-range": "^7.1.1",
+    "find-up": "^4.1.0",
+    "flat-cache": "^3.2.0",
+    "flatted": "^3.3.3",
+    "for-each": "^0.3.5",
+    "foreground-child": "^3.3.1",
+    "fs.realpath": "^1.0.0",
+    "function-bind": "^1.1.2",
+    "function.prototype.name": "^1.1.8",
+    "functions-have-names": "^1.2.3",
+    "gensync": "^1.0.0-beta.2",
+    "get-caller-file": "^2.0.5",
+    "get-intrinsic": "^1.3.0",
+    "get-package-type": "^0.1.0",
+    "get-proto": "^1.0.1",
+    "get-stream": "^6.0.1",
+    "get-symbol-description": "^1.1.0",
+    "glob": "^10.4.5",
+    "glob-parent": "^6.0.2",
+    "globals": "^13.24.0",
+    "globalthis": "^1.0.4",
+    "gopd": "^1.2.0",
+    "graceful-fs": "^4.2.11",
+    "graphemer": "^1.4.0",
+    "has-bigints": "^1.1.0",
+    "has-flag": "^4.0.0",
+    "has-property-descriptors": "^1.0.2",
+    "has-proto": "^1.2.0",
+    "has-symbols": "^1.1.0",
+    "has-tostringtag": "^1.0.2",
+    "hasown": "^2.0.2",
+    "html-escaper": "^2.0.2",
+    "human-signals": "^2.1.0",
+    "ignore": "^5.3.2",
+    "import-fresh": "^3.3.1",
+    "import-local": "^3.2.0",
+    "imurmurhash": "^0.1.4",
+    "inflight": "^1.0.6",
+    "inherits": "^2.0.4",
+    "internal-slot": "^1.1.0",
+    "is-array-buffer": "^3.0.5",
+    "is-arrayish": "^0.2.1",
+    "is-async-function": "^2.1.1",
+    "is-bigint": "^1.1.0",
+    "is-boolean-object": "^1.2.2",
+    "is-callable": "^1.2.7",
+    "is-core-module": "^2.16.1",
+    "is-data-view": "^1.0.2",
+    "is-date-object": "^1.1.0",
+    "is-extglob": "^2.1.1",
+    "is-finalizationregistry": "^1.1.1",
+    "is-fullwidth-code-point": "^3.0.0",
+    "is-generator-fn": "^2.1.0",
+    "is-generator-function": "^1.1.0",
+    "is-glob": "^4.0.3",
+    "is-map": "^2.0.3",
+    "is-negative-zero": "^2.0.3",
+    "is-number": "^7.0.0",
+    "is-number-object": "^1.1.1",
+    "is-path-inside": "^3.0.3",
+    "is-regex": "^1.2.1",
+    "is-set": "^2.0.3",
+    "is-shared-array-buffer": "^1.0.4",
+    "is-stream": "^2.0.1",
+    "is-string": "^1.1.1",
+    "is-symbol": "^1.1.1",
+    "is-typed-array": "^1.1.15",
+    "is-weakmap": "^2.0.2",
+    "is-weakref": "^1.1.1",
+    "is-weakset": "^2.0.4",
+    "isarray": "^2.0.5",
+    "isexe": "^2.0.0",
+    "istanbul-lib-coverage": "^3.2.2",
+    "istanbul-lib-instrument": "^6.0.3",
+    "istanbul-lib-report": "^3.0.1",
+    "istanbul-lib-source-maps": "^5.0.6",
+    "istanbul-reports": "^3.2.0",
+    "jackspeak": "^3.4.3",
+    "jest-changed-files": "^30.0.5",
+    "jest-circus": "^30.1.2",
+    "jest-cli": "^30.1.2",
+    "jest-config": "^30.1.2",
+    "jest-diff": "^30.1.2",
+    "jest-docblock": "^30.0.1",
+    "jest-each": "^30.1.0",
+    "jest-environment-node": "^30.1.2",
+    "jest-haste-map": "^30.1.0",
+    "jest-leak-detector": "^30.1.0",
+    "jest-matcher-utils": "^30.1.2",
+    "jest-message-util": "^30.1.0",
+    "jest-mock": "^30.0.5",
+    "jest-pnp-resolver": "^1.2.3",
+    "jest-regex-util": "^30.0.1",
+    "jest-resolve": "^30.1.0",
+    "jest-resolve-dependencies": "^30.1.2",
+    "jest-runner": "^30.1.2",
+    "jest-runtime": "^30.1.2",
+    "jest-snapshot": "^30.1.2",
+    "jest-util": "^30.0.5",
+    "jest-validate": "^30.1.0",
+    "jest-watcher": "^30.1.2",
+    "jest-worker": "^30.1.0",
+    "js-tokens": "^4.0.0",
+    "js-yaml": "^3.14.1",
+    "jsesc": "^3.1.0",
+    "json-buffer": "^3.0.1",
+    "json-parse-even-better-errors": "^2.3.1",
+    "json-schema-traverse": "^0.4.1",
+    "json-stable-stringify-without-jsonify": "^1.0.1",
+    "json5": "^2.2.3",
+    "keyv": "^4.5.4",
+    "leven": "^3.1.0",
+    "levn": "^0.4.1",
+    "lines-and-columns": "^1.2.4",
+    "locate-path": "^5.0.0",
+    "lodash.debounce": "^4.0.8",
+    "lodash.merge": "^4.6.2",
+    "lru-cache": "^5.1.1",
+    "make-dir": "^4.0.0",
+    "makeerror": "^1.0.12",
+    "math-intrinsics": "^1.1.0",
+    "merge-stream": "^2.0.0",
+    "merge2": "^1.4.1",
+    "micromatch": "^4.0.8",
+    "mimic-fn": "^2.1.0",
+    "minimatch": "^3.1.2",
+    "minimist": "^1.2.8",
+    "minipass": "^7.1.2",
+    "ms": "^2.1.3",
+    "napi-postinstall": "^0.3.3",
+    "natural-compare": "^1.4.0",
+    "node-int64": "^0.4.0",
+    "node-releases": "^2.0.19",
+    "normalize-path": "^3.0.0",
+    "npm-run-path": "^4.0.1",
+    "object-inspect": "^1.13.4",
+    "object-keys": "^1.1.1",
+    "object.assign": "^4.1.7",
+    "object.entries": "^1.1.9",
+    "object.fromentries": "^2.0.8",
+    "object.groupby": "^1.0.3",
+    "object.values": "^1.2.1",
+    "once": "^1.4.0",
+    "onetime": "^5.1.2",
+    "optionator": "^0.9.4",
+    "own-keys": "^1.0.1",
+    "p-limit": "^3.1.0",
+    "p-locate": "^4.1.0",
+    "p-try": "^2.2.0",
+    "package-json-from-dist": "^1.0.1",
+    "parent-module": "^1.0.1",
+    "parse-json": "^5.2.0",
+    "path-exists": "^4.0.0",
+    "path-is-absolute": "^1.0.1",
+    "path-key": "^3.1.1",
+    "path-parse": "^1.0.7",
+    "path-scurry": "^1.11.1",
+    "picocolors": "^1.1.1",
+    "picomatch": "^2.3.1",
+    "pirates": "^4.0.7",
+    "pkg-dir": "^4.2.0",
+    "possible-typed-array-names": "^1.1.0",
+    "prelude-ls": "^1.2.1",
+    "pretty-format": "^30.0.5",
+    "punycode": "^2.3.1",
+    "pure-rand": "^7.0.1",
+    "queue-microtask": "^1.2.3",
+    "react-is": "^18.3.1",
+    "reflect.getprototypeof": "^1.0.10",
+    "regenerate": "^1.4.2",
+    "regenerate-unicode-properties": "^10.2.0",
+    "regexp.prototype.flags": "^1.5.4",
+    "regexpu-core": "^6.2.0",
+    "regjsgen": "^0.8.0",
+    "regjsparser": "^0.12.0",
+    "require-directory": "^2.1.1",
+    "resolve": "^1.22.10",
+    "resolve-cwd": "^3.0.0",
+    "resolve-from": "^5.0.0",
+    "reusify": "^1.1.0",
+    "rimraf": "^3.0.2",
+    "run-parallel": "^1.2.0",
+    "safe-array-concat": "^1.1.3",
+    "safe-push-apply": "^1.0.0",
+    "safe-regex-test": "^1.1.0",
+    "semver": "^6.3.1",
+    "set-function-length": "^1.2.2",
+    "set-function-name": "^2.0.2",
+    "set-proto": "^1.0.0",
+    "shebang-command": "^2.0.0",
+    "shebang-regex": "^3.0.0",
+    "side-channel": "^1.1.0",
+    "side-channel-list": "^1.0.0",
+    "side-channel-map": "^1.0.1",
+    "side-channel-weakmap": "^1.0.2",
+    "signal-exit": "^4.1.0",
+    "slash": "^3.0.0",
+    "source-map": "^0.6.1",
+    "source-map-support": "^0.5.13",
+    "sprintf-js": "^1.0.3",
+    "stack-utils": "^2.0.6",
+    "stop-iteration-iterator": "^1.1.0",
+    "string-length": "^4.0.2",
+    "string-width": "^5.1.2",
+    "string-width-cjs": "^4.2.3",
+    "string.prototype.trim": "^1.2.10",
+    "string.prototype.trimend": "^1.0.9",
+    "string.prototype.trimstart": "^1.0.8",
+    "strip-ansi": "^6.0.1",
+    "strip-ansi-cjs": "^6.0.1",
+    "strip-bom": "^4.0.0",
+    "strip-final-newline": "^2.0.0",
+    "strip-json-comments": "^3.1.1",
+    "supports-color": "^7.2.0",
+    "supports-preserve-symlinks-flag": "^1.0.0",
+    "synckit": "^0.11.11",
+    "test-exclude": "^6.0.0",
+    "text-table": "^0.2.0",
+    "tmpl": "^1.0.5",
+    "to-regex-range": "^5.0.1",
+    "ts-api-utils": "^2.1.0",
+    "tsconfig-paths": "^3.15.0",
+    "type-check": "^0.4.0",
+    "type-detect": "^4.0.8",
+    "type-fest": "^0.20.2",
+    "typed-array-buffer": "^1.0.3",
+    "typed-array-byte-length": "^1.0.3",
+    "typed-array-byte-offset": "^1.0.4",
+    "typed-array-length": "^1.0.7",
+    "typescript": "^5.9.2",
+    "unbox-primitive": "^1.1.0",
+    "undici-types": "^7.10.0",
+    "unicode-canonical-property-names-ecmascript": "^2.0.1",
+    "unicode-match-property-ecmascript": "^2.0.0",
+    "unicode-match-property-value-ecmascript": "^2.2.0",
+    "unicode-property-aliases-ecmascript": "^2.1.0",
+    "unrs-resolver": "^1.11.1",
+    "update-browserslist-db": "^1.1.3",
+    "uri-js": "^4.4.1",
+    "v8-to-istanbul": "^9.3.0",
+    "walker": "^1.0.8",
+    "which": "^2.0.2",
+    "which-boxed-primitive": "^1.1.1",
+    "which-builtin-type": "^1.2.1",
+    "which-collection": "^1.0.2",
+    "which-typed-array": "^1.1.19",
+    "word-wrap": "^1.2.5",
+    "wrap-ansi": "^8.1.0",
+    "wrap-ansi-cjs": "^7.0.0",
+    "wrappy": "^1.0.2",
+    "write-file-atomic": "^5.0.1",
+    "y18n": "^5.0.8",
+    "yallist": "^3.1.1",
+    "yargs": "^17.7.2",
+    "yargs-parser": "^21.1.1",
+    "yocto-queue": "^0.1.0"
+  },
+  "keywords": []
 }
