--- a/Node_JS_basic/package.json
+++ b/Node_JS_basic/package.json
@@ -4,19 +4,24 @@
   "description": "Readme",
   "main": "0-console.js",
   "scripts": {
+    "dev": "nodemon --exec babel-node ./full_server/server.js ./database.csv",
+    "start": "babel-node ./full_server/server.js ./database.csv",
     "test": "echo \"Error: no test specified\" && exit 1"
-  },
+
+},
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.28.3",
+    "@babel/node": "^7.28.0",
     "@babel/preset-env": "^7.28.3",
     "babel-jest": "^30.1.2",
     "eslint": "^8.57.1",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-jest": "^29.0.1",
-    "jest": "^30.1.2"
+    "jest": "^30.1.2",
+    "nodemon": "^3.1.10"
   },
   "dependencies": {
     "acorn": "^8.15.0",
